guardian_v2/guardian.log
nohup: ignoring input
  File "/opt/ashal-bot/guardian_v2/app/main.py", line 1
    [الكود الكامل اللي في الرسالة السابقة - انسخه كامل]
     ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
